Cambiando colores por el mundo :tada:

--- a/views/agent_add.html
+++ b/views/agent_add.html
@@ -13,7 +13,7 @@
 </nav>
 
 <div class="container">
-    <h2 class="sectionHeader">Crear Agente</h2>
+    <h2 class="sectionHeader">Creación de Nuevo Agente</h2>
     <form class="form-horizontal" method="post" action="/agents/add">
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
