--- a/views/agent_list.html
+++ b/views/agent_list.html
@@ -10,11 +10,11 @@
 </nav>
 
 <div class="container">
-    <h2 class="sectionHeader">Mis Publicaciones</h2>
+    <h2 class="sectionHeader">Propiedades Publicadas</h2>
 
     <div class="headerButtonOverview card-header">
         <h5 class="mb-0">
-            <button type="button" class="buttonOverview btn btn-outline-dark" data-toggle="collapse"
+            <button type="button" class="buttonOverview btn custom-base-style" data-toggle="collapse"
                     data-target="#agentFilter"
                     aria-expanded="false" aria-controls="agentFilter">
                 <span class="fas fa-search"></span><span class="font-weight-bold">Filtro de Agentes</span>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <button type="submit" class="btnSiguiente btn btn-secondary btn-lg btn-block">
+                    <button type="submit" class="btnSiguiente btn btn-dark btn-lg btn-block">
                         Aplicar Filtros
                     </button>
                 </div>
