--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,8 @@
                 <div class="carousel-caption">
                     <h1>Bienvenidos a Arca Agencia Inmobiliaria</h1>
                     <p>La Agencia Inmobiliaria ARCA se constituye en 1991 como empresa dedicada al sector inmobiliario
-                        en toda su extensión, actividad que abarca desde la mediación inmobiliaria en operaciones de venta
+                        en toda su extensión, actividad que abarca desde la mediación inmobiliaria en operaciones de
+                        venta
                         y alquiler, incluyendo Valoraciones y Tasaciones Inmobiliarias, hasta la Administración de
                         Patrimonios y Comunidades de Propietarios. Somos Agentes de la Propiedad
                         Inmobiliaria colegiados. Sumamos ya más de veinticinco años de experiencia profesional y
@@ -50,7 +51,8 @@
                         la comarca.
                     </p>
                     <p>
-                        Ofrecemos a nuestros clientes, asistidos siempre por profesionales cualificados, una gestión integral y personalizada de todas
+                        Ofrecemos a nuestros clientes, asistidos siempre por profesionales cualificados, una gestión
+                        integral y personalizada de todas
                         las operaciones, que va desde la visita comercial y asesoramiento en la negociación hasta la
                         tramitación de toda la contratación, gestión de prestamos hipotecarios, gestión notarial, fiscal
                         y registral.
@@ -68,7 +70,7 @@
                     <p>Si solo estás buscando contactar con uno de nuestros agentes, entra aquí para acceder a una gran
                         variedad de canales de comunicación desde los que podrás
                         comunicarte con nosotros personalmente.</p>
-                    <p><a class="btn btn-lg btn-secondary" href="/info/contact" role="button">Contáctanos</a></p>
+                    <p><a class="btn btn-lg btn-info" href="/info/contact" role="button">Contáctanos</a></p>
                 </div>
             </div>
         </div>
@@ -87,38 +89,36 @@
 
     <div class="row">
         <div class="col-lg-4">
-            <img class="rounded"
+            <img class="centeredComponent"
                  src="img/icons/house.png"
                  alt="Acceso a las viviendas ofertadas" width="140" height="140">
-            <h2>Vivienda</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-                vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
-                cursus
-                magna.</p>
-            <p><a class="btn btn-secondary" href="/properties/vivienda" role="button">Ver Viviendas >></a></p>
+            <h2 class="mini-header">Vivienda</h2>
+            <p>La vivienda es una edificación cuya principal función es ofrecer refugio y habitación a las personas,
+                protegiéndolas de las inclemencias climáticas y de otras amenazas. Otras denominaciones de vivienda son:
+                apartamento, aposento, casa, domicilio, estancia, hogar, lar, mansión, morada, piso, etc.</p>
+            <p><a class="btn custom-base-style" href="/properties/vivienda" role="button">Ver Viviendas >></a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <img class="rounded"
+            <img class="centeredComponent"
                  src="img/icons/local.png"
                  alt="Acceso a los locales ofertados" width="140" height="140">
-            <h2>Local</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
-                mattis
-                consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-                nibh.</p>
-            <p><a class="btn btn-secondary" href="/properties/local" role="button">Ver Locales >></a></p>
+            <h2 class="mini-header">Local</h2>
+            <p>Se entiende por local a aquellos establecimientos comerciales que tienen como objetivo principal el
+                desarrollo de alguna actividad comercial o económica. Los locales
+                pueden variar mucho en términos de tamaño, características, diseño y público al que se dirigen, aunque
+                hay algunas características en común que todos comparten.</p>
+            <p><a class="btn custom-base-style" href="/properties/local" role="button">Ver Locales >></a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <img class="rounded"
+            <img class="centeredComponent"
                  src="img/icons/suelo.png"
                  alt="Acceso a las suelos ofertados" width="140" height="140">
-            <h2>Suelo</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                porta
-                felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum
-                massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="/properties/suelo" role="button">Ver Suelos >></a></p>
+            <h2 class="mini-header">Suelo</h2>
+            <p>El suelo, desde el punto de vista del urbanismo y también de la planificación del territorio, se define
+                como el lugar sobre el que se erigen tanto las edificaciones destinadas a la habitabilidad del hombre,
+                como las infraestructuras necesarias para este.
+                La regulación urbanística distingue y define distintos tipos de suelo.</p>
+            <p><a class="btn custom-base-style" href="/properties/suelo" role="button">Ver Suelos >></a></p>
         </div><!-- /.col-lg-4 -->
     </div>
 </div>
