--- a/views/info_contact.html
+++ b/views/info_contact.html
@@ -38,7 +38,7 @@
     {% if user.permission == 'S' %}
     <div class="headerButtonOverview card-header">
         <h5 class="mb-0">
-            <button type="button" class="buttonOverview btn btn-outline-dark" data-toggle="collapse"
+            <button type="button" class="buttonOverview btn custom-base-style" data-toggle="collapse"
                     data-target="#editInfo"
                     aria-expanded="false" aria-controls="propertyFilter">
                 <span class="fas fa-search"></span><span class="font-weight-bold">Editar Info de Contacto</span>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <button type="submit" class="btnSiguiente btn btn-secondary btn-lg btn-block">
+                    <button type="submit" class="btnSiguiente btn btn-success btn-lg btn-block">
                         Guardar Cambios
                     </button>
                 </div>
