--- a/views/property_add.html
+++ b/views/property_add.html
@@ -405,7 +405,7 @@
             </div>
             <div class="div-field form-row">
                 <div class="col-sm-6">
-                    <button id="btnOwnerA" type="button" class="col-sm-6 btnSiguiente btn btn-secondary btn-lg ">
+                    <button id="btnOwnerA" type="button" class="col-sm-6 btnSiguiente btn btn-dark btn-lg ">
                         Anterior
                     </button>
                 </div>
@@ -428,7 +428,7 @@
             <input type="file" class="input-img form-control" name='imginmueble' id="imginmueble" multiple>
             <div class="div-field form-row">
                 <div class="col-sm-6">
-                    <button id="btnPicturesA" type="button" class="col-sm-6 btnSiguiente btn btn-secondary btn-lg ">
+                    <button id="btnPicturesA" type="button" class="col-sm-6 btnSiguiente btn btn-dark btn-lg ">
                         Anterior
                     </button>
                 </div>
@@ -446,10 +446,10 @@
             <div class="noBorder card">
                 <div class="headerButtonOverview card-header" id="headingOne">
                     <h5 class="mb-0">
-                        <button type="button" class="buttonOverview btn btn-secondary" data-toggle="collapse"
+                        <button type="button" class="buttonOverview btn custom-base-style" data-toggle="collapse"
                                 data-target="#propertyCollapse"
                                 aria-expanded="true" aria-controls="propertyCollapse">
-                            <h2>Datos de la Propiedad</h2>
+                            <h4>Datos de la Propiedad</h4>
                         </button>
                     </h5>
                 </div>
@@ -624,10 +624,10 @@
             <div class="noBorder card">
                 <div class="headerButtonOverview buttonOverview card-header" id="headingTwo">
                     <h5 class="mb-0">
-                        <button type="button" class="buttonOverview btn btn-dark" data-toggle="collapse"
+                        <button type="button" class="buttonOverview btn custom-base-style" data-toggle="collapse"
                                 data-target="#ownerCollapse"
                                 aria-expanded="true" aria-controls="ownerCollapse">
-                            <h2>Datos del Propietario</h2>
+                            <h4>Datos del Propietario</h4>
                         </button>
                     </h5>
                 </div>
@@ -655,7 +655,7 @@
             </div>
             <div class="div-field form-row">
                 <div class="col-sm-6">
-                    <button id="btnOverwievA" type="button" class="col-sm-6 btnSiguiente btn btn-secondary btn-lg ">
+                    <button id="btnOverwievA" type="button" class="col-sm-6 btnSiguiente btn btn-dark btn-lg ">
                         Anterior
                     </button>
                 </div>
@@ -952,7 +952,7 @@
 
                 fillFields();
                 adjustProgressBar(100)
-                setHeader("Resumen.");
+                setHeader("Resumen de la información introducida.");
             }
 
             function fillFields() {
