--- a/views/property_details.html
+++ b/views/property_details.html
@@ -47,7 +47,7 @@
     <div class="div-field-bottom noBorder card">
         <div class="headerButtonOverview card-header">
             <h5 class="mb-0">
-                <button type="button" class="buttonOverview btn btn-outline-dark" data-toggle="collapse"
+                <button type="button" class="buttonOverview btn custom-base-style" data-toggle="collapse"
                         data-target="#ownerDetails"
                         aria-expanded="false" aria-controls="ownerDetails">
                     Datos del Propietario
@@ -108,7 +108,7 @@
             <form class="inline-form" method="get"
                   action="/conversations/add/{{ property._id.toString() }}"
                   encType="multipart/form-data">
-                <button type="submit" class="btn btn-secondary"><span class="fas fa-comment-dots"></span>Contactar
+                <button type="submit" class="btn btn-info"><span class="fas fa-comment-dots"></span>Contactar
                 </button>
             </form>
         </div>
