--- a/views/property_modify.html
+++ b/views/property_modify.html
@@ -466,7 +466,7 @@
             </div>
             <div class="div-field form-row">
                 <div class="col-sm-6">
-                    <button id="btnOwnerA" type="button" class="col-sm-6 btnSiguiente btn btn-secondary btn-lg ">
+                    <button id="btnOwnerA" type="button" class="col-sm-6 btnSiguiente btn btn-dark btn-lg ">
                         Anterior
                     </button>
                 </div>
@@ -489,7 +489,7 @@
             <input type="file" class="input-img form-control" name='imginmueble' id="imginmueble" multiple>
             <div class="div-field form-row">
                 <div class="col-sm-6">
-                    <button id="btnPicturesA" type="button" class="col-sm-6 btnSiguiente btn btn-secondary btn-lg ">
+                    <button id="btnPicturesA" type="button" class="col-sm-6 btnSiguiente btn btn-dark btn-lg ">
                         Anterior
                     </button>
                 </div>
@@ -507,7 +507,7 @@
             <div class="noBorder card">
                 <div class="headerButtonOverview card-header" id="headingOne">
                     <h5 class="mb-0">
-                        <button type="button" class="buttonOverview btn btn-secondary" data-toggle="collapse"
+                        <button type="button" class="buttonOverview btn custom-base-style" data-toggle="collapse"
                                 data-target="#propertyCollapse"
                                 aria-expanded="true" aria-controls="propertyCollapse">
                             <h2>Datos de la Propiedad</h2>
@@ -685,7 +685,7 @@
             <div class="noBorder card">
                 <div class="headerButtonOverview buttonOverview card-header" id="headingTwo">
                     <h5 class="mb-0">
-                        <button type="button" class="buttonOverview btn btn-dark" data-toggle="collapse"
+                        <button type="button" class="buttonOverview btn custom-base-style" data-toggle="collapse"
                                 data-target="#ownerCollapse"
                                 aria-expanded="true" aria-controls="ownerCollapse">
                             <h2>Datos del Propietario</h2>
@@ -716,7 +716,7 @@
             </div>
             <div class="div-field form-row">
                 <div class="col-sm-6">
-                    <button id="btnOverwievA" type="button" class="col-sm-6 btnSiguiente btn btn-secondary btn-lg ">
+                    <button id="btnOverwievA" type="button" class="col-sm-6 btnSiguiente btn btn-dark btn-lg ">
                         Anterior
                     </button>
                 </div>
@@ -997,7 +997,7 @@
                 }
 
                 fillFields();
-                setHeader("Resumen.");
+                setHeader("Resumen de datos modificados.");
             }
 
             function fillFields() {
