--- a/views/property_myproperties.html
+++ b/views/property_myproperties.html
@@ -8,7 +8,7 @@
     </ol>
 </nav>
 <div class="container">
-    <h2 class="sectionHeader">Mis Publicaciones</h2>
+    <h2 class="sectionHeader">Propiedades Publicadas</h2>
 
     <div class="headerButtonOverview card-header">
         <h5 class="mb-0">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <button type="submit" class="btnSiguiente btn btn-secondary btn-lg btn-block">
+                    <button type="submit" class="btnSiguiente btn btn-dark btn-lg btn-block">
                         Aplicar Filtros
                     </button>
                 </div>
@@ -97,7 +97,7 @@
                        href="/properties/edit/{{ property._id.toString() }}"><span class="fas fa-edit"></span></a>
                 </td>
                 <td>
-                    <a class="btn btn-secondary float-right"
+                    <a class="btn btn-success float-right"
                        href="/properties/details/{{ property._id.toString() }}"><span class="far fa-eye"></span></a>
                 </td>
                 <td>
