--- a/views/user_login.html
+++ b/views/user_login.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="div-field form-row">
-            <button id="btnPicturesA" type="submit" class="col-md-12 btnSiguiente btn btn-secondary btn-lg ">Iniciar
+            <button id="btnPicturesA" type="submit" class="col-md-12 btnSiguiente btn custom-base-style btn-lg ">Iniciar
                 Sesión
             </button>
         </div>
