--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -111,6 +111,7 @@ html, body {
 }
 
 .centeredComponent {
+    display: block;
     margin-left: auto;
     margin-right: auto;
 }
@@ -224,12 +225,12 @@ dt {
 }
 
 .page-item.active .page-link{
-    background-color: #373737;
-    border-color: #373737;
+    background-color: #224226;
+    border-color: #224226;
 }
 
 .page-link{
-    color: #373737;
+    color: #224226;
     background-color: white;
 }
 
@@ -276,4 +277,26 @@ dt {
 
 .message-container{
     margin-top: 4em;
+}
+
+.custom-base-style{
+    color: white;
+    background-color: #224226;
+    text-decoration: none;
+}
+
+a.custom-base-style:hover,
+button.custom-base-style:hover{
+    color: white;
+    background-color: black;
+    text-decoration: none;
+}
+
+.breadcrumb{
+    background-color: white;
+    border-radius: 0;
+}
+
+.mini-header{
+    text-align: center;
 }
