--- a/views/agent_modify.html
+++ b/views/agent_modify.html
@@ -11,7 +11,7 @@
     </ol>
 </nav>
 <div class="container">
-    <h2 class="sectionHeader">Editar Agente</h2>
+    <h2 class="sectionHeader">Edición de Agente Existente</h2>
     <h3>Si deja un campo vacío, éste mantendrá su estado original.</h3>
     <form class="form-horizontal" method="post" action="/agents/edit/{{agent._id.toString()}}">
         <div class="form-group">
