--- a/views/base.html
+++ b/views/base.html
@@ -78,7 +78,7 @@
 
 <div id="containerParent">
     <!-- Barra de Navegación superior -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark custom-base-style">
         <a class="link-logo navbar-brand" href="/">
             <img class="imgLogo" src="/img/arca.png" alt="logo"/>
         </a>
@@ -210,7 +210,7 @@
     {% block contenido_principal %}
     <!--Posiblecontenidopordefecto-->
     {% endblock%}
-    <footer class="footer">
+    <footer class="footer custom-base-style">
         <p class="footerP"><span class="font-weight-bold">ARCA AGENCIA INMOBILIARIA</span></p>
         <p class="footerP">Carlos Gómez Piñeiro - Agente de la Propiedad Inmobiliaria</p>
         <p class="footerP">+34 985 470 012 / +34 647 270 438 / info@arca-inmobiliaria.com</p>
