--- a/views/property_list.html
+++ b/views/property_list.html
@@ -9,11 +9,11 @@
 </nav>
 
 <div class="container">
-    <h2 class="sectionHeader">Propiedades</h2>
+    <h2 class="sectionHeader">Propiedades Disponibles</h2>
 
     <div class="headerButtonOverview card-header">
         <h5 class="mb-0">
-            <button type="button" class="buttonOverview btn btn-outline-dark" data-toggle="collapse"
+            <button type="button" class="buttonOverview btn custom-base-style" data-toggle="collapse"
                     data-target="#propertyFilter"
                     aria-expanded="false" aria-controls="propertyFilter">
                 <span class="fas fa-search"></span><span class="font-weight-bold">Filtro de Propiedades</span>
@@ -356,7 +356,7 @@
                 </div>
                 {% endif %}
                 <div class="row">
-                    <button type="submit" class="btnSiguiente btn btn-secondary btn-lg btn-block">
+                    <button type="submit" class="btnSiguiente btn btn-dark btn-lg btn-block">
                         Aplicar Filtros
                     </button>
                 </div>
@@ -418,7 +418,7 @@
             </a>
             {% if user.permission == 'U' %}
             <div class="row">
-                <a type="button" class="centeredComponent btn btn-secondary"
+                <a type="button" class="centeredComponent btn btn-info"
                    href="/conversations/add/{{ property._id.toString() }}">Contactar <span
                         class="fas fa-comment-dots"></span></a>
             </div>
