--- a/views/user_signin.html
+++ b/views/user_signin.html
@@ -39,10 +39,8 @@
                        placeholder="contraseña" required="true"/>
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary">Registrarme</button>
-            </div>
+        <div class="div-field form-row">
+            <button id="btnPicturesA" type="submit" class="col-md-12 btnSiguiente btn custom-base-style btn-lg ">Registrarme</button>
         </div>
     </form>
 </div>
