--- a/views/wishes_mywishes.html
+++ b/views/wishes_mywishes.html
@@ -30,7 +30,8 @@
                 <td>{{ property.typeOp }}</td>
                 <td>
                     <a class="btn btn-danger float-right" href="/wishes/delete/{{ property._id.toString() }}">Eliminar</a>
-                    <a class="btn-wishes btn btn-secondary float-right" href="/properties/details/{{ property._id.toString() }}">Ver</a>
+                    <a class="btn-wishes btn btn-dark float-right" href="/properties/details/{{ property._id.toString() }}"><span
+                            class="far fa-eye"></span> Ver</a>
                 </td>
             </tr>
             {% endfor %}
