--- a/views/wishes/wishes_mywishes.html
+++ b/views/wishes/wishes_mywishes.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block titulo %} ARCA Inmobiliaria{% endblock %}
+{% extends "../base.html" %} {% block titulo %} ARCA Inmobiliaria{% endblock %}
 
 {% block contenido_principal %}
 <nav aria-label="breadcrumb">
