--- a/views/info/info_contact.html
+++ b/views/info/info_contact.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "../base.html" %}
 {% block titulo %} ARCA Inmobiliaria {% endblock %}
 {% block contenido_principal %}
 <nav aria-label="breadcrumb">
