Barra de Navegacion Responsive

--- a/views/base.html
+++ b/views/base.html
@@ -82,6 +82,10 @@
         <a class="link-logo navbar-brand" href="/">
             <img class="imgLogo" src="/img/arca.png" alt="logo"/>
         </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Expandir Navegación">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
