--- a/views/base.html
+++ b/views/base.html
@@ -82,7 +82,8 @@
         <a class="link-logo navbar-brand" href="/">
             <img class="imgLogo" src="/img/arca.png" alt="logo"/>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Expandir Navegación">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar"
+                aria-controls="myNavbar" aria-expanded="false" aria-label="Expandir Navegación">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -245,7 +246,7 @@
                 permission: '{{user.permission}}',
             }
 
-            if(data._id != "") {
+            if (data._id != "") {
                 update(data);
                 let func = setInterval(function () {
                     update(data);
