Modificacion de la Documentacion

--- a/views/properties/property_details.html
+++ b/views/properties/property_details.html
@@ -100,7 +100,7 @@
             <form class="inline-form" method="post"
                   action="/wishes/{{ property._id.toString() }}"
                   encType="multipart/form-data">
-                <button type="submit" class="btn btn-outline-success"><span class="far fa-heart"></span>
+                <button id="btnAnadirSeguimiento" type="submit" class="btn btn-outline-success"><span class="far fa-heart"></span>
                     Añadir a Mi Seguimiento
                 </button>
             </form>
