--- a/views/users/user_signin.html
+++ b/views/users/user_signin.html
@@ -15,28 +15,28 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" required="true"/>
+                <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" required="true" minlength="2" maxlength="20"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="surname">Apellidos:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario"
-                       required="true"/>
+                       required="true" minlength="2" maxlength="30"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="email">Email:</label>
             <div class="col-sm-10">
                 <input type="email" class="form-control" name="email"
-                       placeholder="email@email.com" required="true"/>
+                       placeholder="email@email.com" required="true" minlength="8" maxlength="50"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Password:</label>
             <div class="col-sm-10">
                 <input id="password" type="password" class="form-control" name="password"
-                       placeholder="contraseña" required="true"/>
+                       placeholder="contraseña" required="true" minlength="8" maxlength="50"/>
             </div>
         </div>
         <div class="div-field form-row">
