--- a/views/users/user_login.html
+++ b/views/users/user_login.html
@@ -16,14 +16,14 @@
             <label class="control-label col-sm-2" for="email">Email:</label>
             <div class="col-sm-12">
                 <input type="email" class="form-control" name="email"
-                       placeholder="email@email.com" required="true"/>
+                       placeholder="email@email.com" required="true" minlength="8" maxlength="50"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Password:</label>
             <div class="col-sm-12">
                 <input id="password" type="password" class="form-control" name="password"
-                       placeholder="contraseña" required="true"/>
+                       placeholder="contraseña" required="true" maxlength="50" minlength="8"/>
             </div>
             <div class="centeredText">
                 <a class="contrasenaOlvidarLink" data-toggle="modal" data-target="#modeloRecuperarContrasena">¿Has
@@ -54,7 +54,7 @@
                                 reestablezca la contraseña.</label>
                             <div class="col-sm-10">
                                 <input type="email" class="form-control" name="correoRecuperacion"
-                                       placeholder="Ej. user@email.com" required="true"/>
+                                       placeholder="Ej. user@email.com" required="true" minlength="8" maxlength="50"/>
                             </div>
                         </div>
                     </div>
