--- a/views/users/user_modify.html
+++ b/views/users/user_modify.html
@@ -16,20 +16,21 @@
             <label class="control-label col-sm-2" for="name">Nombre:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" rs
-                       value="{{ user.name }}"/>
+                       value="{{ user.name }}" maxlength="20" minlength="2"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="surname">Apellidos:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario"
-                       value="{{ user.surname }}"/>
+                       value="{{ user.surname }}" maxlength="50" minlength="8"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
             <div class="col-sm-10">
-                <input id="password" type="password" class="form-control" name="password"/>
+                <input id="password" type="password" class="form-control" name="password"
+                       maxlength="50" minlength="8"/>
             </div>
         </div>
         <div class="form-group">
