--- a/views/users/user_passwordRecover.html
+++ b/views/users/user_passwordRecover.html
@@ -10,13 +10,13 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
             <div class="col-sm-10">
-                <input id="password" type="password" class="form-control" name="password"/>
+                <input id="password" type="password" class="form-control" name="password" maxlength="50" minlength="8"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="passwordR">Repetir Contraseña:</label>
             <div class="col-sm-10">
-                <input id="passwordR" type="password" class="form-control" name="passwordR"/>
+                <input id="passwordR" type="password" class="form-control" name="passwordR" maxlength="50" minlength="8"/>
             </div>
         </div>
         <div class="form-group">
